--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     container_name: php_app
     volumes:
       - ./app:/var/www/html
-      - ./composer.json:/var/www/html/composer.json
+      - ./app/composer.json:/var/www/html/composer.json
       - ./app/vendor:/var/www/html/vendor
     networks:
       - app-network
